umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_sf4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "S#n#v4" "1" "F#n3#v" "2" "F#n3#v" "3" "F#n3#v" "4" "F#n3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "S#n#v4" "1" "F#n3#v" "2" "F#n3#v" "3" "F#n3#v" "4" "F#n3#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["0" "4" "1"]] :charge 0 :spin "#u0 #s1"}}}
