umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_sf6.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["S#v6" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"] :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"] [0 4 "1"] [0 5 "1"] [0 6 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["S#v6" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"] :bonds [[0 1 "1"] [0 2 "1"] [0 3 "1"] [0 4 "1"] [0 5 "1"] [0 6 "1"]] :charge 0 :spin "#u0 #s1"}}}
