umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_so3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["S#v6" "O#n2#v2" "O#n2#v2" "O#n2#v2"] :bonds [[0 1 "2"] [0 2 "2"] [0 3 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["S#v6" "O#n2#v2" "O#n2#v2" "O#n2#v2"] :bonds [[0 1 "2"] [0 2 "2"] [0 3 "2"]] :charge 0 :spin "#u0 #s1"}}}
