umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_br-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Br#c-#n4"] :bonds []} :success true}
  :counts {:output {:atoms ["Br#c-#n4"] :bonds []} :success true}}
