umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_cl-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Cl#c-#n4"] :bonds [] :charge -1 :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {:atoms ["Cl#c-#n4"] :bonds [] :charge -1 :spin "#u0 #s1"}
    :success true}}
